--- a/class_two/6.html
+++ b/class_two/6.html
@@ -10,13 +10,21 @@
 
 <body>
     <!-- toString() -->
-    <script>
+    <!-- <script>
         var x = 13
-        var answer = prompt("which's num do you want?","none");
-        if(answer=="none"){
+        var answer = prompt("which's num do you want?", "none");
+        if (answer == "none") {
             alert(x.toString()) //没有输入显示十进制
         }
-        alert(x.toString(answer))   //answer=2 显示1101 answer=16 显示d
+        alert(x.toString(answer))   //answer=2 二进制 显示1101 answer=16 16进制 显示d
+    </script> -->
+    <!-- Number() -->
+    <script>
+        // alert(Number(true)); // 返回 1 
+        // alert(Number(false)); // 返回 0 
+        // alert(Number("666")); // 返回 666 
+        alert(Number(021 - 555 - 3565)); // 返回-4103 
+        alert(Number('horse')); // 返回 NaN
     </script>
 </body>
 
