--- a/class_two/6.html
+++ b/class_two/6.html
@@ -18,13 +18,20 @@
         }
         alert(x.toString(answer))   //answer=2 二进制 显示1101 answer=16 16进制 显示d
     </script> -->
+    
     <!-- Number() -->
-    <script>
+    <!-- <script>
         // alert(Number(true)); // 返回 1 
         // alert(Number(false)); // 返回 0 
         // alert(Number("666")); // 返回 666 
         alert(Number(021 - 555 - 3565)); // 返回-4103 
         alert(Number('horse')); // 返回 NaN
+    </script> -->
+
+    <!-- 布尔值 -->
+    <script>
+        var answer = confirm("Do you want to continue?"); //answer 的值会是 true 或 false 
+        alert(answer * 1); // 结果会是 0 或 1
     </script>
 </body>
 
